licensing: adopt MIT + OpenAI/Anthropic rider across workspace and crates
This updates FrankenPandas licensing text and package metadata to align with
the rider-style license policy used across related projects.

License text:
- Add root `LICENSE` with full "MIT License (with OpenAI/Anthropic Rider)"
  terms (including restricted-party definitions, derivative-use constraints,
  termination language, and enforcement clauses).

Cargo metadata alignment:
- Replace root workspace plain-MIT marker with `license-file = "LICENSE"`.
- Add `license-file = "../../LICENSE"` to each publishable crate manifest under
  `crates/*/Cargo.toml` so crate packaging points at the rider text explicitly.

Docs alignment:
- Add explicit README license statement:
  "MIT License (with OpenAI/Anthropic Rider). See LICENSE."

Result:
- Removes contradictory plain-MIT metadata and makes license intent explicit for
  workspace builds, crate packaging, and repository documentation.

--- a/crates/fp-columnar/Cargo.toml
+++ b/crates/fp-columnar/Cargo.toml
@@ -2,6 +2,7 @@
 name = "fp-columnar"
 version = "0.1.0"
 edition = "2024"
+license-file = "../../LICENSE"
 
 [dependencies]
 fp-types = { path = "../fp-types" }
