--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ members = [
 [workspace.package]
 edition = "2024"
 version = "0.1.0"
-license = "MIT"
+license-file = "LICENSE"
 
 [workspace.dependencies]
 bumpalo = { version = "3.16.0", features = ["collections"] }
