--- a/crates/fp-index/Cargo.toml
+++ b/crates/fp-index/Cargo.toml
@@ -2,6 +2,7 @@
 name = "fp-index"
 version = "0.1.0"
 edition = "2024"
+license-file = "../../LICENSE"
 
 [dependencies]
 fp-types = { path = "../fp-types" }
