--- a/crates/fp-join/Cargo.toml
+++ b/crates/fp-join/Cargo.toml
@@ -2,6 +2,7 @@
 name = "fp-join"
 version = "0.1.0"
 edition = "2024"
+license-file = "../../LICENSE"
 
 [dependencies]
 bumpalo = { workspace = true }
